# drafts

./: .gitignore  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  NOTICE  README.md  build.rs  com.github.limads.Papers.json  drafts.desktop  io.github.limads.Drafts.Devel.json  io.github.limads.Drafts.json  meson.build  papers.desktop
assets/: typst.lang
build-aux/: cargo.sh
data/: com.github.limads.Drafts.appdata.xml  com.github.limads.Papers.appdata.xml.in  com.github.limads.Papers.desktop  com.github.limads.Papers.desktop.in  com.github.limads.Papers.gschema.xml  com.github.limads.testproj.appdata.xml.in  com.github.limads.testproj.desktop.in  com.github.limads.testproj.gschema.xml  io.github.limads.Drafts.appdata.xml  io.github.limads.Drafts.desktop  io.github.limads.Drafts.gschema.xml  meson.build
data/icons/: meson.build
data/icons/hicolor/symbolic/apps/: margin-right-symbolic  text-indent-more-symbolic
data/language-specs/: typst.lang
data/resources/: resources.gresource.xml
po/: POTFILES  meson.build
scripts/: build.sh  bundle.sh  install.sh  postinstall.sh
src/: analyzer.rs  dirwatcher.rs  helper.rs  lib.rs  main.rs  manager.rs  meson.build  parser.rs  state.rs  typesetter.rs
src/tex/: lexer.rs  mod.rs  parser.rs
src/typst_tools/: mod.rs
src/ui/: doctree.rs  editor.rs  mod.rs  titlebar.rs
tests/: archiver.rs  ui.rs
