[package]
name = "drafts"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.5.1"
sourceview5 = { version = "0.5.0" }
libadwaita = { version = "0.2.0", features = ["v1_2"] }
tempfile = "3.3.0"
nom = "7.1.0"
either = "1.6.1"
anyhow = "^1"
tectonic = "0.11.0"
regex = "1.5.4"
serde_json = "1.0.68"
serde = { version="1.0.130", features=["derive"] }
poppler-rs = "0.19.0"
stateful = { path = "../stateful" }
filecase = { path = "../filecase" }
log = "0.4.17"
systemd-journal-logger = "0.5.0"
itertools = "0.10.3"
libc = "0.2.135"

[build-dependencies]
glib-build-tools = "0.16.0"

[[bin]]
name="drafts"
path="src/main.rs"

[[bin]]
name = "helper"
path = "src/helper.rs"

