[package]
name = "drafts"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.5.1"
sourceview5 = { version = "0.5.0", features=["v5_4"] }
libadwaita = { version = "0.2.0", features = ["v1_2"] }
tempfile = "3.3.0"
nom = "7.1.0"
either = "1.6.1"
anyhow = "^1"
regex = "1.5.4"
serde_json = "1.0.68"
serde = { version="1.0.130", features=["derive"] }
poppler-rs = "0.19.0"
stateful = "0.1"
filecase = { git = "https://github.com/limads/filecase", rev = "48f513b" }
log = "0.4.17"
systemd-journal-logger = "0.5.0"
itertools = "0.10.3"
libc = "0.2.135"
once_cell = "1.17.1"
walkdir = "2.3.3"
notify = "5.1.0"
memmap2 = "0.5.10"
dirs = "5.0.0"
same-file = "1"
siphasher = "0.3"
codespan-reporting = "0.11"
elsa = "1.8.0"
csv = "1.1.6"
comemo = "0.2"
typst = { git = "https://github.com/typst/typst", rev = "056d15a" }
typst-library = { git = "https://github.com/typst/typst", rev = "056d15a" }

[build-dependencies]
glib-build-tools = "0.16.0"

[[bin]]
name="drafts"
path="src/main.rs"
